updated cmakelist for world

--- a/robot_bringup/CMakeLists.txt
+++ b/robot_bringup/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 
 INSTALL (
-  DIRECTORY launch
+  DIRECTORY launch world
   DESTINATION share/${PROJECT_NAME}/
 )
 
